--- a/AStar/style/style.css
+++ b/AStar/style/style.css
@@ -95,6 +95,14 @@ body {
 #a-star #canvas-container {
   height: 70%;
   background-color: rgba(0, 0, 0, 0.8);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#a-star #canvas-container #myCanvas {
+  margin: auto;
+  border: 1px solid white;
 }
 
 #a-star #controls {
